crates/toml/tests/snapshots/invalid/ext/keys/ml_literal.stderr
TOML parse error at line 1, column 3
  |
1 | '''key'''=3
  |   ^
expected `.`, `=`
